# Semantic-Language

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: post_stable_track.md
.github/PULL_REQUEST_TEMPLATE/: post_stable_slice.md
.github/workflows/: ci.yml
apps/workbench/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/workbench/src-tauri/: Cargo.toml  tauri.conf.json
apps/workbench/src-tauri/src/: adapter.rs  docs.rs  lib.rs  lsp_bridge.rs  main.rs  reports.rs  scaffold.rs  snapshot.rs  workspace_files.rs
artifacts/baselines/: semantic_v1_language_maturity_release_bundle_manifest.json
assets/legacy_cli/: human.sm  machine.sem  profile.json  samples.json
crates/core-lab/: Cargo.toml
crates/core-lab/src/: main.rs
crates/core-lab/tests/: help_hygiene.rs
crates/exo-cli/: Cargo.toml
crates/exo-cli/src/: lib.rs
crates/exo-core/: Cargo.toml
crates/exo-emit/: Cargo.toml
crates/exo-frontend/: Cargo.toml
crates/exo-ir/: Cargo.toml
crates/exo-ir/src/: legacy_lowering.rs  lib.rs  local_format.rs
crates/exo-semantics/: Cargo.toml
crates/exo-semantics/src/: alloc_core.rs  lib.rs  std_adapters.rs
crates/exo-vm/: Cargo.toml
crates/exo-vm/src/: exobyte_vm.rs  lib.rs
crates/prom-abi/: Cargo.toml
crates/prom-audit/: Cargo.toml
crates/prom-audit/src/: lib.rs
crates/prom-cap/: Cargo.toml
crates/prom-gates/: Cargo.toml
crates/prom-rules/: Cargo.toml
crates/prom-runtime/: Cargo.toml
crates/prom-runtime/src/: lib.rs
crates/prom-state/: Cargo.toml
crates/prom-ui/: Cargo.toml
crates/prom-ui-demo/: Cargo.toml
crates/prom-ui-demo/src/: main.rs
crates/prom-ui-runtime/: Cargo.toml
crates/prom-ui-runtime/src/: lib.rs
crates/semantic-core-backend/: Cargo.toml
crates/semantic-core-backend/src/: arm.rs  lib.rs  scalar.rs  x86.rs
crates/semantic-core-bench/: Cargo.toml
crates/semantic-core-bench/src/: lib.rs  main.rs
crates/semantic-core-capsule/: Cargo.toml
crates/semantic-core-capsule/golden/: bool_branch.core.json  call_return.core.json  fuel_trap.core.json  fx_arithmetic.core.json  i32_arithmetic.core.json  quad_join.core.json  quad_known.core.json  quad_meet.core.json  u32_arithmetic.core.json
crates/semantic-core-capsule/src/: lib.rs
crates/semantic-core-capsule/tests/: golden.rs
crates/semantic-core-exec/: Cargo.toml
crates/semantic-core-exec/src/: lib.rs
crates/semantic-core-quad/: Cargo.toml
crates/semantic-core-runtime/: Cargo.toml
crates/sm-emit/: Cargo.toml
crates/sm-front/: Cargo.toml
crates/sm-front/src/: lexer.rs  lib.rs  parser.rs  typecheck.rs  types.rs
crates/sm-ir/: Cargo.toml
crates/sm-ir/src/: legacy_lowering.rs  lib.rs  local_format.rs
crates/sm-ir/src/passes/: cleanup.rs  crystalfold.rs  mod.rs
crates/sm-profile/: Cargo.toml
crates/sm-profile/src/: lib.rs
crates/sm-runtime-core/: Cargo.toml
crates/sm-sema/: Cargo.toml
crates/sm-sema/src/: alloc_core.rs  lib.rs  std_adapters.rs
crates/sm-verify/: Cargo.toml
crates/sm-verify/src/: lib.rs
crates/sm-vm/: Cargo.toml
crates/sm-vm/src/: lib.rs  semcode_vm.rs
crates/smc-cli/: Cargo.toml
crates/smc-cli/src/: api_contract.rs  app.rs  config.rs  executable_bundle.rs  formatter.rs  incremental.rs  lib.rs  package_manifest.rs  schema_versioning.rs  wire_contract.rs
crates/ton618-core/: Cargo.toml
docs/: DNA.md  ERROR_CODES.md  EXO_DNA.md  LANGUAGE.md  LOGOS_GRAMMAR_v0_1.md  NAMING.md  NO_STD.md  ROADMAP_V0_3.md  cache.md  examples_index.md  exports.md  getting_started.md  imports.md  legacy-map.md  opts.md  release_artifact_model.md  roadmap_next.md
docs/architecture/: blueprint.md  dependency_boundary_rules.md  module_ownership_map.md
docs/core/: backend_policy.md  execution_core.md  instruction_set.md  quad_algebra.md  traps_and_fuel.md
docs/errors/: E0242.md  E0243.md  E0244.md  E0245.md  index.md
docs/process/: change_traceability.md  index.md  pr_and_merge_policy.md  project_discipline.md  semantic_core_capsule_audit_matrix.md  semantic_core_capsule_pr_program.md
docs/roadmap/: application_completeness_pr_ledger.md  backlog.md  branch_disposition_2026-05-02.md  compatibility_statement.md  final_readiness_verdict.md  first_wave_map_surface.md  full_readiness_non_ui.md  m_tail_closeout.md  milestones.md  module_authoring_wave_decision.md  post_v03_release_notes.md  public_status_model.md  readiness_completion_plan.md  release_asset_smoke_matrix.md  release_bundle_checklist.md  repository_truth_audit_2026-04-22.md  runtime_validation_policy.md  stable_release_policy.md  tail_t1_pr24_closeout.md  tail_t3_panic_audit.md  tail_t4_dead_code_audit.md  tail_t5_legacy_perimeter_check.md  tail_t6_workbench_separation.md  (+2 more)
examples/: calculator_demo.exb  semantic_policy_overdrive.sm  semantic_policy_overdrive_trace.sm
reports/: cold_start_rehearsal_2026-04-24.md  g1_benchmark_baseline.md  g1_execution_integrity.md  g1_frontend_trust.md  g1_real_program_trial.md  g1_release_scope_statement.md  g1_surface_expressiveness.md
scripts/: package_workbench_beta.ps1  verify_release_assets.ps1  verify_release_bundle.ps1
src/: lib.rs
tests/: arena_stage_guards.rs  bytecode_compat.rs  cache_reuse_smoke.rs  cache_trace_dep_changed.rs  cache_trace_reason_matrix.rs  canonical_examples.rs  dependency_boundaries.rs  executable_module_entry.rs  frontend_boundaries.rs  fuzz_harness.rs  fuzz_lite.rs  g1_benchmark_baseline.rs  g1_execution_integrity.rs  g1_frontend_trust.rs  g1_real_program_trial.rs  golden_semcode.rs  golden_snapshots.rs  import_export_docs_fixtures.rs  imports_matrix.rs  ir_opt_boundaries.rs  legacy_guards.rs  prometheus_audit.rs  prometheus_boundary.rs  prometheus_gates.rs  prometheus_runtime.rs  prometheus_runtime_compat_matrix.rs  prometheus_runtime_goldens.rs  prometheus_runtime_matrix.rs  prometheus_runtime_negative_goldens.rs  prometheus_semantic_runtime.rs  public_api_contracts.rs  runtime_ownership_e2e.rs  snake_benchmark_gap_matrix.rs  stress_large_laws.rs
ton618_legacy/: Cargo.toml
ton618_legacy/src/: lib.rs
(+353 files in other folders)
