[package]
name = "semantic_language"
version = "0.1.0"
edition = "2021"
authors = ["Said Kulmakov"]
license = "MIT OR Apache-2.0"
description = "Semantic Language with TON618 Core"
repository = ""
keywords = ["logic", "simd", "reasoning", "agi"]
categories = ["no-std", "science"]

[workspace]
members = [
    ".",
    "crates/ton618-core",
    "crates/sm-front",
    "crates/sm-profile",
    "crates/sm-sema",
    "crates/sm-ir",
    "crates/sm-emit",
    "crates/sm-verify",
    "crates/sm-runtime-core",
    "crates/sm-vm",
    "crates/smc-cli",
    "crates/prom-abi",
    "crates/prom-cap",
    "crates/prom-gates",
    "crates/prom-runtime",
    "crates/prom-state",
    "crates/prom-rules",
    "crates/prom-audit",
    "crates/prom-ui",
    "crates/prom-ui-runtime",
    "crates/prom-ui-demo",
]
resolver = "2"

[lib]
name = "semantic_language"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "ton618_core"
path = "src/bin/ton618_core.rs"
required-features = ["std"]

[[bin]]
name = "smc"
path = "src/bin/smc.rs"
required-features = ["std"]

[[bin]]
name = "svm"
path = "src/bin/svm.rs"
required-features = ["std"]

# -----------------------------
# Features
# -----------------------------
[features]
default = ["std", "profile-rust", "profile-logos", "debug-symbols"]
std = ["dep:serde", "dep:serde_json"]
simd = []
bench = []
profile-rust = []
profile-logos = []
debug-symbols = []

# -----------------------------
# Dependencies
# -----------------------------
[dependencies]
ton618-core = { path = "crates/ton618-core", default-features = false, features = ["alloc"] }
sm-front = { path = "crates/sm-front", default-features = false, features = ["std"] }
sm-profile = { path = "crates/sm-profile", default-features = false, features = ["std"] }
sm-sema = { path = "crates/sm-sema", default-features = false, features = ["std"] }
sm-ir = { path = "crates/sm-ir", default-features = false, features = ["std", "profile-rust", "profile-logos", "debug-symbols"] }
sm-emit = { path = "crates/sm-emit", default-features = false, features = ["std"] }
sm-verify = { path = "crates/sm-verify", default-features = false, features = ["std"] }
sm-runtime-core = { path = "crates/sm-runtime-core", default-features = false, features = ["std"] }
sm-vm = { path = "crates/sm-vm", default-features = false, features = ["std"] }
smc-cli = { path = "crates/smc-cli", default-features = false, features = ["std", "profile-rust", "profile-logos", "debug-symbols"] }
prom-abi = { path = "crates/prom-abi", default-features = false, features = ["std"] }
prom-cap = { path = "crates/prom-cap", default-features = false, features = ["std"] }
prom-gates = { path = "crates/prom-gates", default-features = false, features = ["std"] }
prom-runtime = { path = "crates/prom-runtime", default-features = false, features = ["std"] }
prom-state = { path = "crates/prom-state", default-features = false, features = ["std"] }
prom-rules = { path = "crates/prom-rules", default-features = false, features = ["std"] }
prom-audit = { path = "crates/prom-audit", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# -----------------------------
# Dev / Test
# -----------------------------
[dev-dependencies]

# -----------------------------
# Profiles
# -----------------------------
[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
