[package]
name = "exo-cli"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "exo-cli"
path = "src/bin/exo_cli.rs"

[features]
default = ["std"]
std = [
    "exo-core/std",
    "exo-ir/std",
    "exo-emit/std",
    "exo-semantics/std",
    "exo-vm/std",
]

[dependencies]
exo-core = { path = "../exo-core", default-features = false, features = ["alloc"] }
exo-ir = { path = "../exo-ir", default-features = false, features = ["std"] }
exo-emit = { path = "../exo-emit", default-features = false, features = ["std"] }
exo-semantics = { path = "../exo-semantics", default-features = false, features = ["std"] }
exo-vm = { path = "../exo-vm", default-features = false, features = ["std"] }
