[package]
name = "exo-ir"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std", "profile-rust", "profile-logos", "debug-symbols"]
std = ["exo-frontend/std"]
profile-rust = []
profile-logos = []
debug-symbols = []

[dependencies]
exo-frontend = { path = "../exo-frontend", default-features = false, features = ["std"] }
