[package]
name = "exo-semantics"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["alloc", "exo-core/std", "exo-frontend/std"]
alloc = ["exo-core/alloc", "exo-frontend/alloc"]

[dependencies]
exo-core = { path = "../exo-core", default-features = false, features = ["alloc"] }
exo-frontend = { path = "../exo-frontend", default-features = false }
