[package]
name = "exo-vm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["exo-emit/std", "exo-frontend/std"]

[dependencies]
exo-emit = { path = "../exo-emit", default-features = false, features = ["std"] }
exo-frontend = { path = "../exo-frontend", default-features = false, features = ["std"] }
