[package]
name = "prom-runtime"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "prom-audit/std",
    "prom-abi/std",
    "prom-cap/std",
    "prom-gates/std",
    "prom-rules/std",
    "prom-state/std",
    "sm-runtime-core/std",
    "sm-vm/std",
]

[dependencies]
prom-audit = { path = "../prom-audit", default-features = false }
prom-abi = { path = "../prom-abi", default-features = false }
prom-cap = { path = "../prom-cap", default-features = false }
prom-gates = { path = "../prom-gates", default-features = false }
prom-rules = { path = "../prom-rules", default-features = false }
prom-state = { path = "../prom-state", default-features = false }
sm-runtime-core = { path = "../sm-runtime-core", default-features = false }
sm-vm = { path = "../sm-vm", default-features = false }
