[package]
name = "semantic-core-bench"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "core-bench"
path = "src/main.rs"

[dependencies]
semantic-core-backend = { path = "../semantic-core-backend", default-features = false, features = ["std"] }
semantic-core-capsule = { path = "../semantic-core-capsule", default-features = false, features = ["std"] }
semantic-core-exec = { path = "../semantic-core-exec", default-features = false, features = ["std", "serde"] }
semantic-core-quad = { path = "../semantic-core-quad", default-features = false }
semantic-core-runtime = { path = "../semantic-core-runtime", default-features = false, features = ["std", "serde"] }
