[package]
name = "semantic-core-capsule"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std", "serde"]
std = ["semantic-core-exec/std", "semantic-core-runtime/std"]
serde = [
    "dep:serde",
    "dep:serde_json",
    "semantic-core-exec/serde",
    "semantic-core-runtime/serde",
]

[dependencies]
semantic-core-exec = { path = "../semantic-core-exec", default-features = false }
semantic-core-quad = { path = "../semantic-core-quad", default-features = false }
semantic-core-runtime = { path = "../semantic-core-runtime", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
