[package]
name = "sm-front"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["alloc", "ton618-core/std"]
alloc = ["ton618-core/alloc"]

[dependencies]
ton618-core = { path = "../ton618-core", default-features = false, features = ["alloc"] }
sm-profile = { path = "../sm-profile", default-features = false, features = ["std"] }
