[package]
name = "sm-sema"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["alloc", "ton618-core/std", "sm-front/std"]
alloc = ["ton618-core/alloc", "sm-front/alloc"]

[dependencies]
ton618-core = { path = "../ton618-core", default-features = false, features = ["alloc"] }
sm-front = { path = "../sm-front", default-features = false }
