[package]
name = "sm-verify"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["sm-emit/std", "sm-runtime-core/std"]

[dependencies]
sm-emit = { path = "../sm-emit", default-features = false, features = ["std"] }
sm-runtime-core = { path = "../sm-runtime-core", default-features = false, features = ["std"] }
